--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
       <div ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
     </div>
 
-    <div class="container" id="footer">FOOTER HERE</div>
+    <div class="container" id="footer"></div>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script> -->
     <script src="scripts/angular.min.js"></script>
     <script src="scripts/lodash.js"></script>
